--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,13 @@
 language: php
 
 php:
-    - 5.4
     - 5.5
     - 5.6
+    - 7.0
     - hhvm
-    - hhvm-nightly
 
 matrix:
     fast_finish: true
-    allow_failures:
-        - php: hhvm-nightly
 
 before_script:
     - composer self-update
@@ -22,5 +19,4 @@ script:
     - vendor/bin/phpcs --standard=PSR2 -s -p src/
 
 after_script:
-    - wget https://scrutinizer-ci.com/ocular.phar
-    - php ocular.phar code-coverage:upload --format=php-clover ./build/clover.xml
+    - vendor/bin/ocular code-coverage:upload --format=php-clover ./build/clover.xml
