--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,14 @@
     "description": "Tonis\\View is a light-weight, HHVM compatible, and dependency free view compatability layer. It does not provide its own templating system!",
     "license": "BSD-3-Clause",
     "require": {
-        "php": ">=5.4"
+        "php": ">=5.5"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.0",
-        "squizlabs/php_codesniffer": "~1.0"
+        "phpunit/phpunit": "^4.0",
+        "scrutinizer/ocular": "^1.1.1",
+        "squizlabs/php_codesniffer": "^1.0",
+        "league/plates": "^3.1",
+        "twig/twig": "^1.18"
     },
     "suggest": {
         "twig/twig": "To use with the Twig engine"
