--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: php
 
+cache:
+  directories:
+    - vendor
+
 php:
     - 5.5
     - 5.6
@@ -11,7 +15,8 @@ matrix:
 
 before_script:
     - composer self-update
-    - composer update
+    - composer config --global github-oauth.github.com "$GITHUB_TOKEN"
+    - composer update --prefer-dist --no-interaction
 
 script:
     - cd $TRAVIS_BUILD_DIR
