--- a/.travis.yml
+++ b/.travis.yml
@@ -23,4 +23,4 @@ script:
     - vendor/bin/phpcs --standard=PSR2 -s -p src/
 
 after_script:
-    - if [[ ${TRAVIS_PHP_VERSION:0:3} == "5.5" ]]; then vendor/bin/ocular code-coverage:upload build/clover.xml --format=php-clover; fi
+    - if [[ ${TRAVIS_PHP_VERSION:0:3} == "5.5" ]]; then wget https://scrutinizer-ci.com/ocular.phar; php ocular.phar code-coverage:upload build/clover.xml --format=php-clover; fi
